# rust-ticket-manager

./: .env  Cargo.toml  docker-compose.yml  learning_requirements.md  readme.md
migrations/2025-02-10-181243_create_tables/: down.sql  up.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs  pool.rs  schema.rs
src/handlers/: api_response.rs  issue.rs  mod.rs  project.rs
src/models/: issue.rs  mod.rs  project.rs
src/routes/: mod.rs  router.rs
tests/: issue_tests.rs  project_tests.rs
tests/common/: mod.rs
