[package]
name = "ticket_manager"  # Changed from ticket-manager to match module name
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"  # Added for ServiceExt
tower-http = { version = "0.5", features = ["trace"] }  # Added for middleware

chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }

tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }  # Added for testing
hyper = { version = "1.0", features = ["full"] }  # Added for HTTP types
